Added squish and got visibility working

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div id="reset"><a id="resetButton"><i class="material-icons">replay</i></a></div>
 
         </div>
+        <audio src="splat.wav" autoplay="false" width="0" height="0" id="splat">
         <script src="script.js"></script>
     </center></body>
 </html>
