Removed redundant tags and added Pomodoro link

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div id="title"><h1>Pomodoro Clock</h1></div>
             <div id="session">Session</div>
             <div id="break">Break</div>
-            <div id="downsesh"><a id="sessionDownArrow"><i class="material-icons">keyboard_arrow_down</i></a></div>
+            <div id="downsesh"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
             <div id="seshtime" class="time">25</div>
-            <div id="upsesh"><a id="sessionUpArrow"><i class="material-icons">keyboard_arrow_up</i></a></div>
-            <div id="downbreak"><a id="breakDownArrow"><i class="material-icons">keyboard_arrow_down</i></a></div>
+            <div id="upsesh"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
+            <div id="downbreak"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
             <div id="breaktime" class="time">5</div>
-            <div id="upbreak"><a id="breakUpArrow"><i class="material-icons">keyboard_arrow_up</i></a></div>
+            <div id="upbreak"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
             <div id="clock" class="time">25:00</div>
             <div id="play"><a id="playButton"><i class="material-icons">play_circle_outline</i></a></div>
             <div id="pause"><a id="pauseButton"><i class="material-icons">pause_circle_outline</i></a></div>
@@ -28,6 +28,10 @@
             <div id="reset"><a id="resetButton"><i class="material-icons">replay</i></a></div>
 
         </div>
+        <footer>
+<a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">What is Pomodoro?</a>
+
+        </footer>
         <audio src="splat.wav" autoplay="false" width="0" height="0" id="splat">
         <script src="script.js"></script>
     </center></body>
