--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
         <link rel="stylesheet"  type="text/css" href="style.css">
         <title>Pomodoro Clock</title>
     </head>
-    <body><center>
-        <div id="container" class="container">
-            
-            <div id="title"><h1>Pomodoro Clock</h1></div>
-            <div id="session">Session</div>
-            <div id="break">Break</div>
-            <div id="downsesh"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
-            <div id="seshtime" class="time">25</div>
-            <div id="upsesh"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
-            <div id="downbreak"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
-            <div id="breaktime" class="time">5</div>
-            <div id="upbreak"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
-            <div id="clock" class="time">25:00</div>
-            <div id="play"><a id="playButton"><i class="material-icons">play_circle_outline</i></a></div>
-            <div id="pause"><a id="pauseButton"><i class="material-icons">pause_circle_outline</i></a></div>
-            <div id="stop"><a id="stopButton"><i class="material-icons">stop</i></a></div>
-            <div id="reset"><a id="resetButton"><i class="material-icons">replay</i></a></div>
+    <body>
+        <center>
+            <div id="container" class="container">
+                
+                <div id="title"><h1>Pomodoro Clock</h1></div>
+                <div id="session">Session</div>
+                <div id="break">Break</div>
+                <div id="downsesh"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
+                <div id="seshtime" class="time">25</div>
+                <div id="upsesh"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
+                <div id="downbreak"><a><i class="material-icons">keyboard_arrow_down</i></a></div>
+                <div id="breaktime" class="time">5</div>
+                <div id="upbreak"><a><i class="material-icons">keyboard_arrow_up</i></a></div>
+                <div id="clock" class="time">25:00</div>
+                <div id="play"><a id="playButton"><i class="material-icons">play_circle_outline</i></a></div>
+                <div id="pause"><a id="pauseButton"><i class="material-icons">pause_circle_outline</i></a></div>
+                <div id="stop"><a id="stopButton"><i class="material-icons">stop</i></a></div>
+                <div id="reset"><a id="resetButton"><i class="material-icons">replay</i></a></div>
 
-        </div>
-        <footer>
-<a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">What is Pomodoro?</a>
-
-        </footer>
-        <audio src="splat.wav" autoplay="false" width="0" height="0" id="splat">
-        <script src="script.js"></script>
-    </center></body>
+            </div>
+            <footer><a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">What is Pomodoro?</a> </footer>
+            <audio src="splat.wav" autoplay="false" width="0" height="0" id="splat">
+            <script src="script.js"></script>
+        </center>
+    </body>
 </html>
